--- a/index.html
+++ b/index.html
@@ -229,46 +229,19 @@
 
         <div class="row section-header has-bottom-sep" data-aos="fade-up">
             <div class="col-full">
-                <h3 class="subhead subhead--dark">We Are The</h3>
-                <h1 class="display-1">Lynx Foundation</h1>
+                <h1 class="display-1">The Team</h1>
             </div>
         </div> <!-- end section-header -->
 
-        <div class="row about-desc" data-aos="fade-up">
-            <div class="col-full">
-                <p>
-                    We are a non-profit organization building services that gives
-                    you a similar level of privacy when you are with your friends and family in person.
-                </p>
-                <p>
-                    We believe in the future the cost of services will be marginal
-                    and it will be so easy to pay for it, that nobody will think about it anymore.
-                </p>
-                <p>
-                    We are building services where you are in control, and nobody can access,
-                    or stop you from accessing your data, not even us.
-                </p>
+        <div class="avatar-block-container" data-aos="fade-up">
+            <div class="avatar-block">
+                <div class="gazso avatar"></div>
+                <h5>Attila Gazso</h5>
 
             </div>
-        </div> <!-- end about-desc -->
-
-        <div class="row about-stats stats block-1-4 block-m-1-2 block-mob-full" data-aos="fade-up">
-
-            <div class="col-block stats__col ">
-                <div class="stats__count">127</div>
-                <h5>Awards Received</h5>
-            </div>
-            <div class="col-block stats__col">
-                <div class="stats__count">1505</div>
-                <h5>Cups of Coffee</h5>
-            </div>
-            <div class="col-block stats__col">
-                <div class="stats__count">109</div>
-                <h5>Projects Completed</h5>
-            </div>
-            <div class="col-block stats__col">
-                <div class="stats__count">102</div>
-                <h5>Happy Clients</h5>
+            <div class="avatar-block">
+                <div class="vujevits avatar"></div>
+                <h5>Mark Vujevits</h5>
             </div>
 
         </div> <!-- end about-stats -->
