--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             </div>
 
             <div class="home-content__scroll">
-                <a href="#about" class="scroll-link smoothscroll">
+                <a href="#services" class="scroll-link smoothscroll">
                     <span>Scroll Down</span>
                 </a>
             </div>
