add viktor to the team

--- a/index.html
+++ b/index.html
@@ -243,6 +243,10 @@
                 <div class="vujevits avatar"></div>
                 <h5>Mark Vujevits</h5>
             </div>
+            <div class="avatar-block">
+                <div class="tron avatar"></div>
+                <h5>Viktor Tron</h5>
+            </div>
 
         </div> <!-- end about-stats -->
 
