--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
                 <ul class="header-nav__list">
                     <li class="current"><a class="smoothscroll"  href="#home" title="home">Home</a></li>
                     <li><a class="smoothscroll"  href="#about" title="about">About</a></li>
-                    <li><a class="smoothscroll"  href="#services" title="services">Services</a></li>
+                    <li><a class="smoothscroll"  href="#team" title="team">Team</a></li>
                     <li><a class="smoothscroll"  href="#works" title="works">Works</a></li>
-                    <li><a class="smoothscroll"  href="#clients" title="clients">Clients</a></li>
-                    <li><a class="smoothscroll"  href="#contact" title="contact">Contact</a></li>
+                    <li><a class="smoothscroll"  href="#community" title="community">Community</a></li>
+                    <li><a class="smoothscroll"  href="#community" title="contact">Contact</a></li>
                 </ul>
 
                 <p>Perspiciatis hic praesentium nesciunt. Et neque a dolorum <a href='#0'>voluptatem</a> porro iusto sequi veritatis libero enim. Iusto id suscipit veritatis neque reprehenderit.</p>
@@ -161,9 +161,9 @@
 
 
 
-    <!-- services
+    <!-- about
     ================================================== -->
-    <section id='services' class="s-services">
+    <section id='about' class="s-services">
 
         <div class="row section-header has-bottom-sep" data-aos="fade-up">
             <div class="col-full">
@@ -223,9 +223,9 @@
     </section> <!-- end s-services -->
 
 
-    <!-- about
+    <!-- team
     ================================================== -->
-    <section id='about' class="s-about">
+    <section id='team' class="s-about">
 
         <div class="row section-header has-bottom-sep" data-aos="fade-up">
             <div class="col-full">
@@ -283,9 +283,9 @@
     </section> <!-- end s-works -->
 
 
-    <!-- clients
+    <!-- community
     ================================================== -->
-    <section id="clients" class="s-clients">
+    <section id="community" class="s-clients">
 
         <div class="row section-header" data-aos="fade-up">
             <div class="col-full">
