--- a/index.html
+++ b/index.html
@@ -274,9 +274,14 @@
                     <p>With this application users can share secrets and files with each other, just like with Airdrop, but it works across continents.</p>
                 </div>
                 <div class="avatar-block">
+                    <h4>Swarm Light Node</h4>
+                    <p>We are contributing to the Ethereum Swarm project by working on the light node implementation, making it feasible to run Swarm on mobile phones.</p>
+                </div>
+                <div class="avatar-block">
                     <h4>Postmodern</h4>
                     <p>An antisocial alternative for Facebook, you can follow RSS feeds, post photos and thoughts, and only you'll be able to see them.</p>
                 </div>
+
             </div>
         </div> <!-- end intro-wrap -->
 
