change foundation name and update postmodern description

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!--- basic page needs
     ================================================== -->
     <meta charset="utf-8">
-    <title>Lynx Foundation</title>
+    <title>Felfele Foundation</title>
     <meta name="description" content="">
     <meta name="author" content="">
 
@@ -107,7 +107,7 @@
 
             <div class="row home-content__main">
 
-                <h3>Welcome to the Lynx Foundation</h3>
+                <h3>Welcome to the Felfele Foundation</h3>
 
                 <h1>
                     We are a non-profit org <br>
@@ -168,7 +168,7 @@
         <div class="row section-header has-bottom-sep" data-aos="fade-up">
             <div class="col-full">
                 <h3 class="subhead subhead--dark">We Are The</h3>
-                <h1 class="display-1 display-1--light">Lynx Foundation</h1>
+                <h1 class="display-1 display-1--light">Felfele Foundation</h1>
             </div>
         </div> <!-- end section-header -->
 
@@ -270,16 +270,12 @@
 
             <div class="projects-container">
                 <div class="avatar-block">
-                    <h4>Keydrop</h4>
-                    <p>With this application users can share secrets and files with each other, just like with Airdrop, but it works across continents.</p>
-                </div>
-                <div class="avatar-block">
                     <h4>Swarm Light Node</h4>
                     <p>We are contributing to the Ethereum Swarm project by working on the light node implementation, making it feasible to run Swarm on mobile phones.</p>
                 </div>
                 <div class="avatar-block">
                     <h4>Postmodern</h4>
-                    <p>An antisocial alternative for Facebook, you can follow RSS feeds, post photos and thoughts, and only you'll be able to see them.</p>
+                    <p>A decentralized social network where people can exchange thoughts without compromising their privacy. Built on top of Swarm, mobile first. </p>
                 </div>
 
             </div>
