add correct email address to contact link

--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
                     <div class="testimonials__slide">
 
                         <p>The need for human communication is constant and technology enabled us to build tools to serve this need. Historically this evolved to practices that takes away our rights to privacy and control, because that was the only economic way to build these tools in a global scale. Fortunately there are better ways to achieve this now, which respect your privacy and let you stay in control. We commit to working towards this future by making new technologies and services available at a price that’s affordable for everyone.</p>
-                        <a href="mailto:someone@example.com">Contact us</a>
+                        <a href="mailto:contact@felfele.com">Contact us</a>
                         <!-- <img src="images/avatars/user-01.jpg" alt="Author image" class="testimonials__avatar">
                         <div class="testimonials__info">
                             <span class="testimonials__name">Tim Cook</span>
