add links to the blog

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
                     <li><a class="smoothscroll"  href="#about" title="about">About</a></li>
                     <li><a class="smoothscroll"  href="#team" title="team">Team</a></li>
                     <li><a class="smoothscroll"  href="#works" title="works">Works</a></li>
+                    <li><a target="_blank" href="http://blog.felfele.com" title="blog">Blog</a></li>
                     <li><a class="smoothscroll"  href="#community" title="community">Community</a></li>
                     <li><a class="smoothscroll"  href="#community" title="contact">Contact</a></li>
                 </ul>
@@ -187,7 +188,7 @@
                 </div>
                 <div class="service-text">
                     <h3 class="h2">Manifesto</h3>
-                    <p>Read our Manifesto here.
+                    <p>Read our Manifesto <a target="_blank" href="http://blog.felfele.com/post/first/" title="here">here</a>.
                     </p>
                 </div>
             </div>
